# pmt_simulationpp

./: CMakeLists.txt  README.md  main.cxx  plot_signals_example.ipynb
6keV_arrays/: arr_times.txt  n_photons.txt  x_0.txt  y_0.txt
config/: ConfigFile_new.txt
include/: pmt_hits.h  signal_generation.h
noise_psd/: fast_noise_ch1.txt  fast_noise_ch2.txt  fast_noise_ch3.txt  fast_noise_ch4.txt  slow_noise_ch1.txt  slow_noise_ch2.txt  slow_noise_ch3.txt  slow_noise_ch4.txt
output/: fast_signal.csv  slow_signal.csv
src/: pmt_hits.cxx  signal_generation.cxx
